@@ -19,6 +19,8 @@ asterisk (1:1.6.2.0~dfsg~beta3-1) UNRELEASED; urgency=low
     was also lintian-buggy in its current form.
   * Don't include /var/run/asterisk in the package, it is created at boot-time
     by the init script (thanks lintian).
+  * Remove asterisk-progdocs: it is of very limited use but a) is enormous in
+    size and b) takes too long to build.
 
   [ Tzafrir Cohen ]
   * New upstream release.
@@ -30,7 +32,7 @@ asterisk (1:1.6.2.0~dfsg~beta3-1) UNRELEASED; urgency=low
   [ Lionel Elie Mamane ]
   * Install UPGRADE-1.6.txt, useful for people upgrading from lenny
 
- -- Faidon Liambotis <paravoid@debian.org>  Mon, 27 Jul 2009 21:21:08 +0300
+ -- Faidon Liambotis <paravoid@debian.org>  Mon, 27 Jul 2009 21:53:03 +0300
 
 asterisk (1:1.6.1.0~dfsg-1) unstable; urgency=low
 
